levando dados para a tela do carrinho

--- a/carrinho.html
+++ b/carrinho.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
             <img src="img/Logo.png" width="30" height="30" alt="">
             VonShop
             </a>
@@ -33,8 +33,7 @@
                 </li>            
             </ul>
             </div>
-            <a href="carrinho.html"><img src="img/carrinho.png" width="30" height="30" alt=""></a>
-            <a href="carrinho.html"><p id="qtd" style="color:white"></p></a>
+            
         </nav>
     </header>
 
