--- a/projetos-XXX.html
+++ b/projetos-XXX.html
@@ -12,13 +12,13 @@
     <script type="text/javascript" src="jQuery/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="js/Produtos.js"></script>
 
-    <link rel="stylesheet" href="../trabalho_loja_THIAGO_RAMON/css/estilo_layout_teste.css"> <!--ERRO NESSE LINK -->
+    <link rel="stylesheet" href="css/estilo_layout_teste.css"> <!--ERRO NESSE LINK -->
     <link href="css/carrosel.css" rel="stylesheet">
     <link href="css/carrinho.css" rel="stylesheet">
 </head>
 
 <body>
-    <header>
+    <header>    
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
                 <a class="navbar-brand" href="projetos-XXX.html">
@@ -59,7 +59,7 @@
                         <li class="nav-item">
                             <div>
                                 <a href="carrinho.html"><img id="cart" src="img/carrinho.png"></a>
-                                <span id="qtdeCart">0</span>
+                                <span id="qtd"></span>
                             </div>
                         </li>
                     </ul>
