excluindo itens do carrinho

--- a/carrinho.html
+++ b/carrinho.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand salvarcarrinho" href="index.html">
             <img src="img/Logo.png" width="30" height="30" alt="">
             VonShop
             </a>
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                <a class="nav-link " href="index.html">Tela inicial<span class="sr-only">(current)</span></a>
+                <a class="nav-link salvarcarrinho" href="index.html">Tela inicial<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                 <a class="nav-link" href="#">Sobre</a>
