--- a/carrinho.html
+++ b/carrinho.html
@@ -41,8 +41,13 @@
     <main id="corpocarrinho">
         <div class="container">
             <ul id = "carrinho" class="list-group">
-            </ul>  
+            </ul>
+            <div>
+                <br>
+                <a href="carrinho.html"><button type="button" class="btn btn-sm btn-outline-danger limpar">Limpar Carrinho</button></a>
+            </div>  
         </div>
+        
                   
     </main>
 
