--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
           <ul class="navbar-nav">
             <li class="nav-item active">
               <a class="nav-link" href="index.html">Tela inicial<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Sobre</a>
-            </li>            
+            </li>          
           </ul>
         </div>
-        <a id = "salvarcarrinho" href="carrinho.html"><img src="img/carrinho.png" width="30" height="30" alt=""></a>
-        <a href="carrinho.html"><p id="qtd" style="color:white"></p></a>
+        <div style="width:50px;height:50px;">
+            <a id = "salvarcarrinho" href="carrinho.html"><img src="img/carrinho.png" width="35" height="35" alt="">
+              <p id="qtd" style="color:white;float: right;"></p>              
+            </a>          
+        </div>
+        
       </nav>
 </header>
 
