--- a/carrinho.html
+++ b/carrinho.html
@@ -24,17 +24,16 @@
             </button>
         
             <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                <a class="nav-link salvarcarrinho" href="index.html">Tela inicial<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                <a class="nav-link" href="#">Sobre</a>
-                </li>            
-            </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                    <a class="nav-link salvarcarrinho" href="index.html">Tela inicial<span class="sr-only">(current)</span></a>
+                    </li>          
+                </ul>
             </div>
-            <img src="img/carrinho.png" width="30" height="30" alt="">
-            <p id="qtd" style="color:white"></p>
+            <div style="width:50px;height:50px;">
+                  <img src="img/carrinho.png" width="35" height="35" alt="">
+                  <p id="qtd" style="color:white;float: right;"></p> 
+            </div>
         </nav>
     </header>
 
